forge/tests/error/hello.frg
#lang forge
option run_sterling off
hello world

